--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,8 @@ caffe2.egg-info
 # cython generated files
 lib/model/utils/bbox.c
 lib/pycocotools/_mask.c
+
+# ignore video data
+*.avi
+*.mov
+*.mp4
