modify rfcn_lighthead to rfcn_light_head

--- a/cfgs/res101_lighthead.yml
+++ b/cfgs/res101_lighthead.yml
@@ -21,4 +21,4 @@ CROP_RESIZE_WITH_MAX_POOL: False
 RESNET:
   CORE_CHOICE:
     #USE: 'faster_rcnn'
-    USE: 'rfcn_lighthead'
+    USE: 'rfcn_light_head'
