--- a/cfgs/res101_lighthead_siam.yml
+++ b/cfgs/res101_lighthead_siam.yml
@@ -54,7 +54,7 @@ SIAMESE:
   RPN_POSITIVE_OVERLAP: 0.7
   # Select training samples for siameseRPN loss. RPN_NEGATIVE_OVERLAP_LO < IOU < RPN_NEGATIVE_OVERLAP_HI: negative example
   RPN_NEGATIVE_OVERLAP_HI: 0.3
-  RPN_NEGATIVE_OVERLAP_LO: 0.0 #0.01
+  RPN_NEGATIVE_OVERLAP_LO: 0.001
 
   # SIAMESE.CROP_TYPE can be one of ('roi_align','center_crop')
   CROP_TYPE: 'center_crop'
