--- a/cfgs/res101_lighthead_siam.yml
+++ b/cfgs/res101_lighthead_siam.yml
@@ -13,7 +13,7 @@ TRAIN:
   LEARNING_RATE: 0.001
   # siamese related.
   SIAMESE_ONLY: False
-  SIAMESE_MAX_TRACKING_OBJ: 15
+  SIAMESE_MAX_TRACKING_OBJ: 10
 TEST:
   HAS_RPN: True
 POOLING_SIZE: 7
@@ -39,7 +39,7 @@ SIAMESE:
   TEMPLATE_SEL_BG_THRESH_LO: 0.1
   TEMPLATE_SEL_BG_THRESH_HI: 0.1
   TEMPLATE_SEL_BATCH_SIZE: 128
-  TEMPLATE_GEN_FROM_GT_ITERS: 3
+  TEMPLATE_GEN_FROM_GT_ITERS: 0
 
   # This should be 1.0. As we only propose positive training samples.
   FG_FRACTION: 1.0
@@ -55,15 +55,15 @@ SIAMESE:
   #  SIAMESE.RPN_PRE_NMS_TOP_N: 100
   #  SIAMESE.RPN_POST_NMS_TOP_N: 20
   # Proposal height and width both need to be greater than RPN_MIN_SIZE (at orig image scale)
-  RPN_POSITIVE_OVERLAP: 0.7
-  # Select training samples for siameseRPN loss. RPN_NEGATIVE_OVERLAP_LO < IOU < RPN_NEGATIVE_OVERLAP_HI: negative example
-  RPN_NEGATIVE_OVERLAP_HI: 0.3
-  RPN_NEGATIVE_OVERLAP_LO: 0.001
+  RPN_POSITIVE_OVERLAP: 0.6
+  # Select training samples for siameseRPN loss. RPN_NEGATIVE_OVERLAP_LO <= IOU <= RPN_NEGATIVE_OVERLAP_HI: negative example
+  RPN_NEGATIVE_OVERLAP_HI: 0.4
+  RPN_NEGATIVE_OVERLAP_LO: 0.0
 
   # SIAMESE.CROP_TYPE can be one of ('roi_align','center_crop')
   CROP_TYPE: 'center_crop'
   # SIAMESE DETECTION INFLUENCE WEIGHT. 1.0 means the same as the original weight.
-  DET_WEIGHT: 1.0
+  DET_WEIGHT: 0.0
   # SCORE THRESHOLD FOR TRACKING.
   THRESH_FOR_TRACKING: 0.8
 
@@ -71,12 +71,14 @@ SIAMESE:
   # TODO this may need further tuning.
   HANNING_WINDOW_WEIGHT: 0.4
   # The hanning window size is of instance size*HANNING_WINDOW_SIZE_FACTOR.
-  HANNING_WINDOW_SIZE_FACTOR: 0.6
+  HANNING_WINDOW_SIZE_FACTOR: 1.0
   PANELTY_K: 0.15
   # Whether to use distance to penalize rpn box selection.
   USE_POS_PRIOR_FOR_SEL: True
   # Detach the siam training features or not.
   DETACH_FEAT: False
+  DETACH_CONV1234: True
   NORMALIZE_CORRELATION: False
   # Use DCN for feature trans.
   USE_DCN: False
+  USE_SEPARABLE_CORRELATION: False
