Add SIAM_RPN_SCORE_THRESH to select siam rpn

--- a/cfgs/res101_lighthead_siam.yml
+++ b/cfgs/res101_lighthead_siam.yml
@@ -24,6 +24,7 @@ TEST:
   HAS_RPN: True
   SCALES: [768]
   RPN_SCORE_THRESH: 0.7
+  SIAM_RPN_SCORE_THRESH: 0.0
 POOLING_SIZE: 7
 #POOLING_MODE: align
 POOLING_MODE: pspool
