--- a/cfgs/res101_lighthead_siam.yml
+++ b/cfgs/res101_lighthead_siam.yml
@@ -24,7 +24,8 @@ TEST:
   HAS_RPN: True
   SCALES: [768]
   RPN_SCORE_THRESH: 0.7
-  SIAM_RPN_SCORE_THRESH: 0.0
+  SIAM_RPN_SCORE_THRESH: 0.5
+  NMS_CROSS_CLASS: 0.7
 POOLING_SIZE: 7
 #POOLING_MODE: align
 POOLING_MODE: pspool
@@ -72,7 +73,7 @@ SIAMESE:
   # SIAMESE.CROP_TYPE can be one of ('roi_align','center_crop')
   CROP_TYPE: 'center_crop'
   # SIAMESE DETECTION INFLUENCE WEIGHT. 1.0 means the same as the original weight.
-  DET_WEIGHT: 0.0
+  DET_WEIGHT: 0.05
   # SCORE THRESHOLD FOR TRACKING.
   THRESH_FOR_TRACKING: 0.9
 
