--- a/cfgs/res101_lighthead_medium_OHEM.yml
+++ b/cfgs/res101_lighthead_medium_OHEM.yml
@@ -16,8 +16,13 @@ TRAIN:
   OHEM: True
   OHEM_BATCH_SIZE: 128
   RPN_NMS_THRESH: 1.0
+  TRIM_HEIGHT: 640
+  TRIM_WIDTH: 640
+  SCALES: [640]
 TEST:
+  SCALES: [640]
   HAS_RPN: True
+  RPN_SCORE_THRESH: 0.7
 POOLING_SIZE: 7
 #POOLING_MODE: align
 POOLING_MODE: pspool
