Add up to date cfgs.

--- a/cfgs/res101_lighthead.yml
+++ b/cfgs/res101_lighthead.yml
@@ -11,8 +11,13 @@ TRAIN:
   WEIGHT_DECAY: 0.0001
   DOUBLE_BIAS: False
   LEARNING_RATE: 0.001
+  TRIM_HEIGHT: 768
+  TRIM_WIDTH: 768
+  SCALES: [768]
 TEST:
+  SCALES: [768]
   HAS_RPN: True
+  RPN_SCORE_THRESH: 0.7
 POOLING_SIZE: 7
 #POOLING_MODE: align
 POOLING_MODE: pspool
